# linkshare-Project

./: Cargo.toml  README.md
migrations/2023-01-19-131040_create_users/: down.sql  up.sql
src/: config.rs  configuration.rs  configure.rs  dataa.rs  db.rs  lib.rs  login.html  login.rs  main.rs  schema.rs  startup.rs  userdata.rs
src/middleware/: mod.rs
src/queries/: db_models.rs  messages.rs  mod.rs  new_user.rs
src/routes/: dataa.rs  error.rs  mod.rs  userdata.rs  utils.rs
src/start_server/: mod.rs
