[package]
name = "linkshare"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix = "0.13.0"
actix-identity = "0.5.2"
actix-web-lab = "0.18.9"
actix-web = { version = "4.2.1", default-features = false, features = ["cookies", "secure-cookies"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
uuid = { version = "1.2.2"}
futures = "0.3"
chrono = "0.4"
base64 = "0.13.0"
crypto = {version="0.4.0"}
config = "0.13.1"
eyre = "0.6.8"
color-eyre = "0.6.2"
anyhow = "1.0.68"
utoipa = { version = "2.4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["actix-web"] }
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.15", features = ["std", "env-filter"] }
dotenv = "0.15.0"

data-encoding = "2.3.3"
ring = "0.16.20"

diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono" ,"uuid"] }
[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]

